# satd

./: .dockerignore  .gitignore  ADDRESS_INDEX.md  CHANGELOG.md  CONTRIBUTING.md  CORE_DIFFERENCES.md  CORE_GAPS.md  Cargo.toml  Cross.toml  Dockerfile  ECOSYSTEM.md  LICENSE  MANIFESTO.md  OPERATOR_ERGONOMICS.md  README.md  ROADMAP.md  SATD_CLI_COMPAT_AUDIT.md  SECURITY.md  STABILITY_POLICY.md  configure  deny.toml  flake.nix  rust-toolchain.toml
btcd/: Cargo.toml
btcd/src/: config.rs  main.rs
btcd/tests/: regtest.rs
consensus/: Cargo.toml
consensus/bench-data/: block_300000.json  extract_block.py
consensus/benches/: legacy.rs  p2sh.rs  real_block.rs  segwit_v0.rs  taproot.rs  tx_valid.rs
consensus/benches/common/: mod.rs
consensus/src/: checker.rs  condition.rs  encoding.rs  error.rs  eval.rs  flags.rs  lib.rs  scriptnum.rs  sighash.rs  stack.rs  verify.rs  witness.rs
consensus/tests/: batch_parity.rs  btcd_bugs.rs  core_edge_cases.rs  coverage_tests.rs  differential.rs  helpers.rs  review_fixes.rs  script_tests.rs  sighash_tests.rs  taproot_tests.rs  tx_tests.rs
docs/: TUI.md  (+2 more)
electrum-proto/: Cargo.toml
electrum-proto/src/: config.rs  dispatch.rs  error.rs  extras.rs  lib.rs  merkle.rs  rpc.rs  server.rs  state.rs  status.rs  subscribe.rs  tls.rs  types.rs
electrum-proto/src/handlers/: blockchain.rs  mempool.rs  mod.rs  server_methods.rs
esplora-handlers/: Cargo.toml
esplora-handlers/src/: auth.rs  config.rs  encode.rs  error.rs  lib.rs  router.rs  serve.rs  state.rs  tls.rs
esplora-handlers/src/handlers/: address.rs  block.rs  chain.rs  mempool.rs  mod.rs  outspend.rs  sse.rs  tx.rs
events/: Cargo.toml  build.rs
events/proto/satd/events/v1/: events.proto
events/src/: descriptor.rs  grpc.rs  lib.rs  watchset.rs  ws.rs  zmq.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_verify.rs  block_differential.rs
fuzz/src/: lib.rs
mcp/: Cargo.toml
mcp/src/: context.rs  lib.rs
mcp/src/tools/: address.rs  blockchain.rs  construction.rs  ergonomics.rs  fees.rs  mempool.rs  mining.rs  mod.rs  network.rs  node_status.rs  policy.rs  transactions.rs  utxo.rs
mcp/tests/: tools.rs
node/: Cargo.toml
node-index/: Cargo.toml
node-index/src/: config.rs  keys.rs  lib.rs  spend_keys.rs  spend_trait.rs  subscribe.rs  trait_def.rs  types.rs
node-sp-index/: Cargo.toml
node-sp-index/src/: compute.rs  config.rs  cursor.rs  keys.rs  lib.rs  trait_def.rs  types.rs
node-sp-index/tests/: vectors.rs
node/src/: adaptive_cache.rs  ibd_eta.rs  lib.rs  memstat.rs  metrics.rs  perf.rs  shutdown.rs  stall_watchdog.rs  startup_progress.rs  warnings.rs
node/src/chain/: assumeutxo.rs  background.rs  checkpoints.rs  connect.rs  connect_phase.rs  disconnect.rs  events.rs  mod.rs  prefetch.rs  reorg_log.rs  repair.rs  state.rs
node/src/events/: envelope.rs  mod.rs  publisher.rs  replay.rs  schema.rs  sink.rs  watch.rs
node/src/index/: mod.rs
node/src/index/address/: backfill.rs  cursor.rs  emit.rs  keys.rs  lookups.rs  mempool.rs  mod.rs  notifier.rs  runner.rs  stats.rs  subscribe.rs  trait_def.rs  types.rs
node/src/index/filter/: backfill.rs  emit.rs  lookups.rs  mod.rs  runner.rs
node/src/index/outpoint_spend/: emit.rs  lookups.rs  mod.rs
node/src/index/silent_payments/: backfill.rs  emit.rs  mod.rs  runner.rs  stats.rs
node/src/mempool/: estimate.rs  events.rs  fee.rs  history.rs  mod.rs  orphanage.rs  persist.rs  policy.rs  policy_engine.rs  pool.rs
node/src/mining/: miner.rs  mod.rs  template.rs
node/src/net/: addrman.rs  asmap.rs  bg_catchup.rs  compact.rs  connection.rs  dns.rs  ibd.rs  manager.rs  mod.rs  peer.rs  permissions.rs  proxy.rs  stats.rs  sync.rs  tor.rs  v2transport.rs
node/src/rpc/: access.rs  address.rs  admission.rs  allowip.rs  amounts.rs  auth.rs  blockchain.rs  capability.rs  compat.rs  error.rs  indexes.rs  mining.rs  mod.rs  network.rs  policy.rs  psbt.rs  rawtx.rs  readonly.rs  server.rs  tls.rs  util.rs
node/src/storage/: addr_index_migrate.rs  blockfile_audit.rs  blockindex.rs  coin_cache.rs  coinview.rs  compressed_coin.rs  db.rs  flatfile.rs  mod.rs  profile.rs  redb_store.rs  rocksdb_store.rs  split_store.rs  undo.rs  undo_migrate.rs
node/src/validation/: block.rs  mod.rs  pow.rs  script.rs  signet.rs  tx.rs
node/tests/: feature_block_consensus.rs
sat-cli/: Cargo.toml
sat-cli/src/: main.rs  policylint.rs  sign.rs  signer.rs
sat-cli/tests/: policylint.rs
sat-tui/: Cargo.toml
sat-tui/src/: main.rs  rpc.rs  state.rs
sat-tui/src/ui/: chain.rs  failure.rs  help.rs  ibd.rs  mempool.rs  mod.rs  reorgs.rs  startup.rs  steady.rs  warnings.rs
satd/: Cargo.toml
satd-auth/: Cargo.toml
satd-auth/src/: capability.rs  credential.rs  error.rs  lib.rs  operator.rs  principal.rs  quota.rs  store.rs  verify.rs
satd-events-client/: Cargo.toml  README.md
satd-events-client/examples/: descriptor_wallet.rs  firehose_tail.rs  lifecycle_alarms.rs  mtls_tail.rs  prefix_privacy.rs  resilient_tail.rs  resilient_watch.rs  sp_light_scan.rs  sp_wallet.rs  tls_tail.rs  watch_outpoints.rs
satd-events-client/src/: client.rs  error.rs  event.rs  lib.rs  prefix.rs  resilience.rs  resilient_watch.rs
satd-events-client/tests/: event_mapping.rs  sp_derivation.rs
satd-events-proto/: Cargo.toml  README.md  build.rs
satd-events-proto/src/: lib.rs
satd-policy/: Cargo.toml  DESIGN.md
satd-policy/src/: advisory.rs  ast.rs  cost.rs  danger.rs  error.rs  eval.rs  explain.rs  lexer.rs  lib.rs  parser.rs  ruleset.rs  scope.rs  script.rs  typeck.rs  value.rs  verdict.rs  view.rs
satd-policy/tests/: calibration.rs  fuzz.rs  integration.rs  ruleset.rs
satd-policy/tests/common/: mod.rs
satd/src/: config.rs  fast_start.rs  main.rs  notify.rs  notifyhooks.rs  reload.rs
satd/tests/: core_block_differential.rs  e2e.rs  phase_c_differential.rs  policy.rs  regtest.rs  streaming.rs
satd/tests/common/: core_node.rs  grpc_client.rs  mod.rs  ws_client.rs
satd/tests/e2e/: sdk.rs  streaming.rs
scripts/canary/bdk-canary/: Cargo.toml
scripts/canary/bdk-canary/src/: main.rs
tls-config/: Cargo.toml
tls-config/src/: lib.rs
(+94 files in other folders)
