[workspace]
members = ["satd", "sat-cli", "node", "node-index", "node-filter-index", "esplora-handlers", "electrum-proto", "sat-tui", "mcp", "consensus", "events", "tls-config"]
resolver = "2"

[workspace.package]
authors = ["Benjamen Keroack <ben@keroack.com>", "20 Gauge Software, Inc.", "The satd developers"]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/epochbtc/satd"
# Workspace crates are not published to crates.io. Marking publish = false
# here also lets cargo-deny's `allow-wildcard-paths` apply to internal
# `path = "../foo"` deps, which are otherwise treated as wildcards.
publish = false

[workspace.dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
jsonrpsee = { version = "0.26", features = ["server", "http-client", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
# `arbitrary_precision`: required so JSON-RPC monetary amounts can be emitted
# as fixed 8-decimal number literals (e.g. `0.00001000`), byte-for-byte
# matching Bitcoin Core's `%d.%08d` univalue output. Without it serde_json
# renders f64s in shortest form (`0.00001`), which strict Core-amount parsers
# (notably Core Lightning's bcli `json_to_bitcoin_amount`) reject. See
# node/src/rpc/amounts.rs. The feature stores Numbers as their source string,
# so amounts round-trip exactly; numeric accessors (`as_f64`/`as_u64`) are
# unaffected.
serde_json = { version = "1", features = ["arbitrary_precision"] }
rand = "0.8"
base64 = "0.22"
tower = "0.5"
tower-http = "0.6"
hyper = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = { version = "0.24", default-features = false, features = ["zstd", "lz4"] }
hex = "0.4"
bincode = "1"
bitcoinconsensus = "0.106"
rayon = "1.10"
tokio-socks = "0.5"
lru = "0.16"
crossbeam-channel = "0.5"
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
protoc-bin-vendored = "3"
tokio-stream = "0.1"
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "all-transport"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = { version = "0.8", features = ["derive"] }
sd-notify = "0.5"
zeroize = "1"
rpassword = "7"
shlex = "1"
