[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoin = { workspace = true }
thiserror = { workspace = true }
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
