[package]
name = "electrum-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tokio-rustls = { workspace = true }
tls-config = { path = "../tls-config" }
node-index = { path = "../node-index" }
node = { path = "../node" }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3"
