[package]
name = "esplora-handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "matched-path", "query", "tracing"] }
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true, features = ["cors", "timeout", "limit", "trace"] }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
# SSE handlers convert tokio::sync::broadcast::Receiver into a Stream
# via `tokio_stream::wrappers::BroadcastStream`. The `sync` feature
# pulls in only the broadcast-stream wrapper, no extra runtime.
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
pin-project = "1"
tokio-rustls = { workspace = true }
tls-config = { path = "../tls-config" }
node-index = { path = "../node-index" }
node = { path = "../node" }
satd-auth = { path = "../satd-auth" }

[dev-dependencies]
axum-test = "17"
rcgen = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
tokio-rustls = { workspace = true }
