[package]
name = "satd-events"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = []
grpc = ["dep:tonic", "dep:prost", "dep:satd-events-proto", "dep:tokio-stream", "dep:satd-auth", "dep:miniscript"]
zmq = ["dep:zeromq"]
ws = ["dep:axum", "dep:futures-util", "dep:tokio-stream", "dep:satd-auth", "dep:miniscript"]

[dependencies]
node = { path = "../node" }
bitcoin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

# grpc feature
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
satd-events-proto = { path = "../satd-events-proto", optional = true }
tokio-stream = { workspace = true, optional = true }
satd-auth = { path = "../satd-auth", optional = true }

# zmq feature
zeromq = { workspace = true, optional = true }

# ws feature (JSON-over-WebSocket + SSE firehose transport)
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "ws", "query"], optional = true }
futures-util = { version = "0.3", optional = true }

# descriptor convenience layer (grpc + ws): expand a descriptor into a watch-set
miniscript = { version = "12", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
