[package]
name = "satd-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
node = { path = "../node" }
rmcp = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-util = "0.7"
satd-auth = { path = "../satd-auth" }

[dev-dependencies]
tempfile = "3"
rmcp = { workspace = true }
