[package]
name = "node-sp-index"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
