[package]
name = "node"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
thiserror = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
bitcoinconsensus = { workspace = true }
tokio-socks = { workspace = true }
lru = { workspace = true }
crossbeam-channel = { workspace = true }

consensus = { path = "../consensus" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
