[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
thiserror = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
bitcoinconsensus = { workspace = true }
tokio-socks = { workspace = true }
lru = { workspace = true }
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

consensus = { path = "../consensus" }
node-index = { path = "../node-index" }
node-filter-index = { path = "../node-filter-index" }

[features]
default = ["block-filter-index"]
# Compile in the BIP 158 compact-block-filter index. Default-on; turn
# off with `--no-default-features` for a consensus-only build (no
# filter codec, no `index::filter::emit`). The runtime knob
# `--blockfilterindex` decides per-block emission once the feature is
# compiled in.
block-filter-index = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
rcgen = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
