[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bitcoin = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
thiserror = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
bitcoinconsensus = { workspace = true }
tokio-socks = { workspace = true }
lru = { workspace = true }
# Fast, non-DoS-resistant hasher for the mempool's Txid/OutPoint-keyed maps.
# Keys are already uniformly-distributed double-SHA256 hashes, so SipHash's
# hash-flooding resistance buys nothing here while costing measurable CPU.
rustc-hash = "2"
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
ipnet = "2.12"
hmac = "0.12"
sha2 = "0.10"
# Tor v3 .onion address derivation (checksum is SHA3-256; address is base32).
sha3 = "0.10"
data-encoding = "2"
bip324 = "0.10"
tls-config = { path = "../tls-config" }

consensus = { path = "../consensus" }
node-index = { path = "../node-index" }
node-filter-index = { path = "../node-filter-index" }
satd-auth = { path = "../satd-auth" }

[features]
default = ["block-filter-index"]
# Compile in the BIP 158 compact-block-filter index. Default-on; turn
# off with `--no-default-features` for a consensus-only build (no
# filter codec, no `index::filter::emit`). The runtime knob
# `--blockfilterindex` decides per-block emission once the feature is
# compiled in.
block-filter-index = []

# `libc` is used by stall_watchdog.rs for raw signal raise (POSIX
# sd_notify is irrelevant — this is the libc::raise SIGTERM path).
# Available on all Unix targets (Linux, macOS, BSD). Previously gated
# to Linux only; that left the macOS aarch64 release build failing on
# unresolved `libc` lookups even though the underlying API is POSIX.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
rcgen = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
