[package]
name = "sat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rpassword = { workspace = true }
shlex = { workspace = true }
satd-policy = { path = "../satd-policy" }
