[package]
name = "satd-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# Transport-agnostic authentication + authorization core for satd. Deliberately
# depends on NO async runtime / HTTP / gRPC crate — each API surface adapts its
# own transport to carry a `Credential` and calls into this crate. See
# SATD_AUTH_PLAN.md.
[dependencies]
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
# Parse-only: the `display` default feature pulls an unpublished toml_writer.
# We only read the token table (DOM parse); round-tripping for future
# create/revoke admin RPCs can re-enable `display` then.
toml_edit = { version = "0.25", default-features = false, features = ["parse"] }
base64 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Sharded concurrent maps for per-principal rate-bucket / watch-occupancy state.
dashmap = "5.5"

[dev-dependencies]
tempfile = "3"
