[package]
name = "satd-events-client"
description = "Async Rust client SDK for the satd.events.v1 streaming consumption API"
version.workspace = true
edition.workspace = true
license.workspace = true
# Inherits the workspace `publish = false` for now (see satd-events-proto and the
# workspace note in the root Cargo.toml); the publish flip is a dedicated PR.
publish.workspace = true
repository.workspace = true

[features]
# `bitcoin` is on by default: the prefix-watch local re-filter and scripthash
# helpers are core to the privacy-preserving watch surface our first consumer
# uses, so they work out of the box. A minimal-dependency build that filters raw
# bytes itself can opt out with `default-features = false`.
default = ["bitcoin"]
# Typed bitcoin helpers + prefix-watch local re-filter ([`PrefixWatcher`]); pulls
# the `bitcoin` crate (and transitively secp256k1).
bitcoin = ["dep:bitcoin"]

[dependencies]
satd-events-proto = { path = "../satd-events-proto" }
tonic = { workspace = true }
prost = { workspace = true }
# Declare the SDK's own minimum tokio surface rather than inheriting the
# workspace `full` set: the library uses `tokio::sync` (the mpsc control
# channel) and `tokio::time` (reconnect backoff sleeps). tonic pulls in the
# runtime/net features it needs. This keeps the published dependency
# self-sufficient and lean instead of relying on downstream feature unification.
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
