[package]
name = "satd-events-client"
description = "Async Rust client SDK for the satd.events.v1 streaming consumption API"
version.workspace = true
edition.workspace = true
license.workspace = true
# Inherits the workspace `publish = false` for now (see satd-events-proto and the
# workspace note in the root Cargo.toml); the publish flip is a dedicated PR.
publish.workspace = true
repository.workspace = true

[features]
# `bitcoin` is on by default: the prefix-watch local re-filter and scripthash
# helpers are core to the privacy-preserving watch surface our first consumer
# uses, so they work out of the box. A minimal-dependency build that filters raw
# bytes itself can opt out with `default-features = false`.
default = ["bitcoin", "tls"]
# Typed bitcoin helpers + prefix-watch local re-filter ([`PrefixWatcher`]); pulls
# the `bitcoin` crate (and transitively secp256k1).
bitcoin = ["dep:bitcoin"]
# Native TLS / mTLS for the gRPC transport via tonic's rustls integration. On by
# default so encrypted connections (and the `StreamClientBuilder::tls*` methods)
# work out of the box; opt out with `default-features = false` for a
# plaintext-only minimal build. Pinned to the `ring` provider (the workspace pins
# `tokio-rustls` to ring with default-features off, so no aws-lc-rs / C toolchain
# is pulled and the single process-wide rustls CryptoProvider stays consistent).
# `tls-webpki-roots` bundles the Mozilla root set so public-CA servers verify
# without depending on the host trust store; a private / self-signed CA is
# supplied per-connection via `tls_ca_pem`.
tls = ["dep:tokio-rustls", "tonic/tls", "tonic/tls-webpki-roots"]

[dependencies]
satd-events-proto = { path = "../satd-events-proto" }
tonic = { workspace = true }
prost = { workspace = true }
# Only pulled by the `tls` feature, and only to install the `ring` rustls
# CryptoProvider as the process default — so a build that also compiled aws-lc-rs
# (e.g. a downstream consumer that doesn't pin the provider) still resolves
# deterministically to ring instead of panicking on an ambiguous default.
tokio-rustls = { workspace = true, optional = true }
# Declare the SDK's own minimum tokio surface rather than inheriting the
# workspace `full` set: the library uses `tokio::sync` (the mpsc control
# channel) and `tokio::time` (reconnect backoff sleeps). tonic pulls in the
# runtime/net features it needs. This keeps the published dependency
# self-sufficient and lean instead of relying on downstream feature unification.
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# The prefix-privacy example uses `PrefixWatcher`, so it only builds with the
# `bitcoin` feature (on by default). Gating it here keeps a
# `--no-default-features --examples` build clean.
[[example]]
name = "prefix_privacy"
required-features = ["bitcoin"]
