[package]
name = "satd-events-client"
description = "Async Rust client SDK for the satd.events.v1 streaming consumption API"
readme = "README.md"
documentation = "https://docs.rs/satd-events-client"
# MSRV: built and tested on the workspace toolchain (see rust-toolchain.toml).
rust-version = "1.93"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["bitcoin", "satd", "streaming", "grpc", "mempool"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
# Published as of the 0.4.0 release (overrides the workspace default of
# `publish = false`; see satd-events-proto).
publish = true
repository.workspace = true

[features]
# `bitcoin` is on by default: the prefix-watch local re-filter and scripthash
# helpers are core to the privacy-preserving watch surface our first consumer
# uses, so they work out of the box. A minimal-dependency build that filters raw
# bytes itself can opt out with `default-features = false`.
default = ["bitcoin", "tls"]
# Typed bitcoin helpers + prefix-watch local re-filter ([`PrefixWatcher`]); pulls
# the `bitcoin` crate (and transitively secp256k1).
bitcoin = ["dep:bitcoin"]
# Native TLS / mTLS for the gRPC transport via tonic's rustls integration. On by
# default so encrypted connections (and the `StreamClientBuilder::tls*` methods)
# work out of the box; opt out with `default-features = false` for a
# plaintext-only minimal build. Pinned to the `ring` provider (the workspace pins
# `tokio-rustls` to ring with default-features off, so no aws-lc-rs / C toolchain
# is pulled and the single process-wide rustls CryptoProvider stays consistent).
# `tls-webpki-roots` bundles the Mozilla root set so public-CA servers verify
# without depending on the host trust store; a private / self-signed CA is
# supplied per-connection via `tls_ca_pem`.
tls = ["dep:tokio-rustls", "tonic/tls", "tonic/tls-webpki-roots"]

[dependencies]
# Cargo uses `path` for the local build and `version` to resolve the published
# dependency; keep this in lockstep with the workspace `version`.
satd-events-proto = { version = "=0.4.0", path = "../satd-events-proto" }
tonic = { workspace = true }
prost = { workspace = true }
# Only pulled by the `tls` feature, and only to install the `ring` rustls
# CryptoProvider as the process default — so a build that also compiled aws-lc-rs
# (e.g. a downstream consumer that doesn't pin the provider) still resolves
# deterministically to ring instead of panicking on an ambiguous default.
tokio-rustls = { workspace = true, optional = true }
# Declare the SDK's own minimum tokio surface rather than inheriting the
# workspace `full` set: the library uses `tokio::sync` (the mpsc control
# channel) and `tokio::time` (reconnect backoff sleeps). tonic pulls in the
# runtime/net features it needs. This keeps the published dependency
# self-sufficient and lean instead of relying on downstream feature unification.
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# The prefix-privacy example uses `PrefixWatcher`, so it only builds with the
# `bitcoin` feature (on by default). Gating it here keeps a
# `--no-default-features --examples` build clean.
[[example]]
name = "prefix_privacy"
required-features = ["bitcoin"]

[[example]]
name = "sp_wallet"
required-features = ["bitcoin"]

[[example]]
name = "sp_light_scan"
required-features = ["bitcoin"]

# TLS / mTLS examples use the `tls`-gated builder methods (`tls_ca_pem`,
# `tls_client_identity`); gating them keeps a `--no-default-features --examples`
# build clean.
[[example]]
name = "tls_tail"
required-features = ["tls"]

[[example]]
name = "mtls_tail"
required-features = ["tls"]

[package.metadata.docs.rs]
# Document the full surface (the `tls` + `bitcoin`-gated items) and turn on the
# `#[doc(cfg(...))]` feature-requirement labels, which are gated on the `docsrs`
# cfg that docs.rs (and our GitHub Pages build) set via `rustdoc-args`.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
