[package]
name = "satd-events-proto"
description = "Generated protobuf/tonic types for the satd.events.v1 streaming API"
version.workspace = true
edition.workspace = true
license.workspace = true
# Inherits the workspace `publish = false` for now. The crate is structured to
# be published (it has no internal path dependencies — only tonic/prost from
# crates.io), but flipping `publish = true` is deferred to a dedicated release
# PR that also pins versions on downstream path deps and reconciles cargo-deny's
# `allow-wildcard-paths` (see the workspace note in the root Cargo.toml).
publish.workspace = true
repository.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
