[package]
name = "satd-events-proto"
description = "Generated protobuf/tonic types for the satd.events.v1 streaming API"
readme = "README.md"
documentation = "https://docs.rs/satd-events-proto"
keywords = ["bitcoin", "satd", "streaming", "grpc", "protobuf"]
categories = ["api-bindings", "encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
# Published alongside satd-events-client as of the 0.4.0 release (overrides
# the workspace default of `publish = false`). No internal path dependencies —
# only tonic/prost from crates.io.
publish = true
repository.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
